--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,23 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.nav_version = "2.2.1"
+    ext.room_version = "2.2.4"
+    ext.fragment_version = "1.2.2"
+    ext.lifecycle_version = "2.2.0"
+    ext.arch_version = "2.1.0"
+    ext.koin_version = "2.1.3"
+    ext.glide_version = "4.11.0"
+
     repositories {
+        mavenCentral()
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
