--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     // ViewModel, LiveData, Lifecycles, ReactiveStreams
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -81,6 +82,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     testImplementation "androidx.room:room-testing:$room_version"
     testImplementation "androidx.arch.core:core-testing:$arch_version"
+    testImplementation 'org.robolectric:robolectric:4.1'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
