--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     // Google Sign In
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    // Fused Location
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
     // Testing Fragments in Isolation
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
