--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,23 @@ android {
             }
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            getProps('./config/production.props').each { p ->
+                buildConfigField 'String', p.key, p.value
+            }
+        }
+        debug {
+            getProps('./config/development.props').each { p ->
+                buildConfigField 'String', p.key, p.value
+            }
         }
     }
 
-    dataBinding{
+    dataBinding {
         enabled true
     }
 
@@ -39,6 +48,11 @@ android {
     }
 }
 
+def getProps(path) {
+    Properties props = new Properties()
+    props.load(new FileInputStream(file(path)))
+    return props
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -68,7 +82,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Sentry
-    implementation 'io.sentry:sentry-android:1.7.26'
+    implementation 'io.sentry:sentry-android:1.7.27'
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -98,12 +112,13 @@ dependencies {
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation "com.squareup.retrofit2:converter-moshi:2.5.0"
 
     // Google Sign In
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
     // Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.4.0'
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
 
     // Fused Location
