--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.koin_version = "2.1.3"
     ext.glide_version = "4.11.0"
     ext.lottie_version = "3.4.0"
+    ext.worker_version = "2.3.4"
 
     repositories {
         mavenCentral()
