--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,7 +88,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
+    //Stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
 
     // ViewModel, LiveData, Lifecycles, ReactiveStreams
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
