--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,9 @@ dependencies {
     // Worker
     implementation "androidx.work:work-runtime-ktx:$worker_version"
 
+    // Facebook
+    implementation 'com.facebook.android:facebook-login:5.15.3'
+
     // Testing Fragments in Isolation
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
 
