* Create user flow with feedback if user was created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.MainActivity" />
-
+        <activity
+            android:name=".ui.MainActivity"
+            android:windowSoftInputMode="adjustPan" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
