--- a/app/config/production.props
+++ b/app/config/production.props
@@ -1,2 +1,3 @@
-BASE_URL="http://0.0.0.0:8000/"
+BASE_URL="https://trena.gsi.mpmg.mp.br/f05_backend/"
 ENVIRONMENT="production"
+TRENA_KEY="DA28L9EEppwvC25tHg2X"
