--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
-    <uses-feature android:name="android.hardware.location.gps" />
+
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="true"/>
 
     <application
         android:name=".core.MPApp"
