--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdkVersion 24
         targetSdkVersion 30
         versionCode 5
-        versionName "1.4.0"
+        versionName "1.5.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -123,8 +123,11 @@ dependencies {
     // Google Sign In
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
+    // Map Utilities
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
+
     // Firebase
-    implementation 'com.google.firebase:firebase-analytics:18.0.1'
+    implementation 'com.google.firebase:firebase-analytics:18.0.2'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
 
     // Fused Location
