--- a/app/config/development.props
+++ b/app/config/development.props
@@ -1,3 +1,3 @@
-BASE_URL="http://10.0.2.2:8000/"
+BASE_URL="https://trena.gsi.mpmg.mp.br"
 ENVIRONMENT="development"
-TRENA_KEY="<TRENA_KEY>"
+TRENA_KEY="0a944fb8-2bbc-4f03-a81a-bf84899cd4f2"
