--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.30'
-    ext.nav_version = "2.3.3"
-    ext.room_version = "2.2.6"
-    ext.fragment_version = "1.3.0"
-    ext.lifecycle_version = "2.3.0"
+    ext.kotlin_version = '1.7.0'
+    ext.nav_version = "2.5.0"
+    ext.room_version = "2.4.2"
+    ext.fragment_version = "1.5.0"
+    ext.lifecycle_version = "2.5.0"
     ext.arch_version = "2.1.0"
     ext.koin_version = "2.2.1"
     ext.glide_version = "4.11.0"
     ext.lottie_version = "3.4.0"
-    ext.worker_version = "2.5.0"
+    ext.worker_version = "2.7.1"
 
     repositories {
         mavenCentral()
@@ -18,10 +18,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
