Connection of Inspections to the API (yet buggy)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
 
         <activity
             android:name=".ui.SplashActivity"
-            android:theme="@style/MPAppTheme.FullScreen">
+            android:theme="@style/MPAppTheme.FullScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
